tests/transpiler/x/hs/in_operator.hs
-- Generated by Mochi transpiler v0.10.31 on 2025-07-19 19:46:25 GMT+7
xs = [1, 2, 3]

main :: IO ()
main = do
    print (2 in xs)
    print (fromEnum (!(5 in xs)))
